--- a/public/about.html
+++ b/public/about.html
@@ -74,3 +74,9 @@
 </div>
 </div>
 </body>
+
+<script src="https://kit.fontawesome.com/cbe61eb727.js" crossorigin="anonymous"></script>
+<script type="module" src="js/index.js"></script>
+<script type="module" src="js/module.js"></script>
+
+</html>
