--- a/public/index.html
+++ b/public/index.html
@@ -70,17 +70,17 @@
       <div class="service">
         <i class="fa-solid fa-hospital-user"></i>
         <h2>Appointment</h2>
-        <p>Lorem ipsum. king king shit</p>
+        <p>View and Add Appointment</p>
       </div>
       <div class="service">
         <i class="fa-solid fa-receipt"></i>
         <h2>Medical History</h2>
-        <p>NOT touching this shit</p>
+        <p>Not been done yet</p>
       </div>
       <div id="DoctorTab" class="service">
         <i class="fa-solid fa-user-doctor"></i>
         <h2>Our Doctor</h2>
-        <p>Lorem ipsum. king king shit</p>
+        <p>View and Add Doctor</p>
       </div>
       <script>
         const DoctorTab = document.getElementById("DoctorTab");
@@ -91,7 +91,7 @@
       <div id="EquipmentTab" class="service">
         <i class="fa-solid fa-kit-medical"></i>
         <h2>Equipment</h2>
-        <p>Lorem ipsum. king king shit</p>
+        <p>View Equipment</p>
       </div>
       <script>
         const EquipmentTab = document.getElementById("EquipmentTab");
@@ -102,7 +102,7 @@
       <div id="MedicineTab" class="service">
         <i class="fa-solid fa-pills"></i>
         <h2>Medicines</h2>
-        <p>Lorem ipsum. king king shit</p>
+        <p>View and Add Medicine</p>
       </div>
       <script>
         const MedicineTab = document.getElementById("MedicineTab");
