--- a/public/requestADMIN.html
+++ b/public/requestADMIN.html
@@ -57,11 +57,11 @@
 
 
 <div class="container">
-  <h1>Buy Medicines</h1>
+  <h1>Add Doctor</h1>
   <div class="Medrow">
     <div id="AddMedicine" class="medicinesItem">
       <i class="fa-solid fa-plus"></i>
-      <h2>Add Medicine</h2>
+      <h2>Add Doctor</h2>
     </div>
     <script>
       document.getElementById("AddMedicine").addEventListener('click', function(event) {
@@ -80,8 +80,8 @@
       });
       </script>
       <div class="form-box login">
-          <h2>Add Medicine</h2>
-          <p>blah</p>
+          <h2>Add Doctor</h2>
+          <p>...</p>
           <button class="btn" id="yesReqbtn">Accept</button>
           <button class="btn" id="noReqbtn">Reject</button>
         </div>
