--- a/public/service.html
+++ b/public/service.html
@@ -60,7 +60,7 @@
     <div id="AppointTab" class="service">
       <i class="fa-solid fa-hospital-user"></i>
       <h2>Appointment</h2>
-      <p>Lorem ipsum. king king shit</p>
+      <p>View and Add Appointment</p>
     </div>
     <script>
       const AppointTab = document.getElementById("AppointTab");
@@ -71,12 +71,12 @@
     <div class="service">
       <i class="fa-solid fa-receipt"></i>
       <h2>Medical History</h2>
-      <p>NOT touching this shit</p>
+      <p>Not been dont yet</p>
     </div>
     <div id="DoctorTab" class="service">
       <i class="fa-solid fa-user-doctor"></i>
       <h2>Our Doctor</h2>
-      <p>Lorem ipsum. king king shit</p>
+      <p>View and Add Doctor</p>
     </div>
     <script>
       const DoctorTab = document.getElementById("DoctorTab");
@@ -87,7 +87,7 @@
     <div id="EquipmentTab" class="service">
       <i class="fa-solid fa-kit-medical"></i>
       <h2>Equipment</h2>
-      <p>Lorem ipsum. king king shit</p>
+      <p>View Equipment</p>
     </div>
     <script>
       const EquipmentTab = document.getElementById("EquipmentTab");
@@ -98,7 +98,7 @@
     <div id="MedicineTab" class="service">
       <i class="fa-solid fa-pills"></i>
       <h2>Medicines</h2>
-      <p>Lorem ipsum. king king shit</p>
+      <p>View and Add Medicine</p>
     </div>
     <script>
       const MedicineTab = document.getElementById("MedicineTab");
