--- a/public/doctor.html
+++ b/public/doctor.html
@@ -59,7 +59,7 @@
   <div class="Medrow">
     <div id="AddDoctor" class="medicinesItem">
       <i class="fa-solid fa-plus"></i>
-      <h2>Add Medicine</h2>
+      <h2>Accept Doctor Request</h2>
     </div>
     <script>
       document.getElementById("AddDoctor").addEventListener('click', function(event) {
