--- a/public/requestADMIN.html
+++ b/public/requestADMIN.html
@@ -57,17 +57,17 @@
 
 
 <div class="container">
-  <h1>Buy Medicines</h1>
+  <h1>Accept Role Request</h1>
   <div class="Medrow">
-    <div id="AddMedicine" class="medicinesItem">
+    <!-- <div id="AddMedicine" class="medicinesItem">
       <i class="fa-solid fa-plus"></i>
-      <h2>Add Medicine</h2>
+      <h2>Accept Role Request</h2>
     </div>
     <script>
       document.getElementById("AddMedicine").addEventListener('click', function(event) {
         document.querySelector('.Medicines-popup').classList.add("active");
       });
-    </script>
+    </script> -->
   </div>
   <div class="Medicines-popup">
     <div class="wrapper">
