--- a/public/about.html
+++ b/public/about.html
@@ -55,16 +55,15 @@
 <div class="container">
 <div class="row">
   <div class="col-md-12 mt-1">
-  <p><span style="color:blue;">GP</span> Hospital  is a multi/super speciality hospital located at the prime location of Vaishnodevi Circle, SG Road, Ahmedabad; with state-of-the-art facilities &amp; treatments at an affordable cost, encompassing wide spectrum of accurate diagnostics and elegant therapeutics created on the philosophical edifice of patient and ethical centricity ensuring humanistic dispensation.</p>
+  <p><span style="color:blue;">GP</span> Hospital  is a multi/super speciality hospital located at the prime location of 26 Dang Thi Nhu, Di An, Ho Chi Minh city; with state-of-the-art facilities &amp; treatments at an affordable cost, encompassing wide spectrum of accurate diagnostics and elegant therapeutics created on the philosophical edifice of patient and ethical centricity ensuring humanistic dispensation.</p>
   <ul>
   <li> Multiple Options For Treatment.</li>
   <li> Full Of Latest Technologies and Equipments.</li>
-  <li> Best Hospital Of 2020 Award Winner.</li>
   <li> 24/7 Ambulance Support.</li>
   <li> Eminent and Experienced Doctors.</li>
   </ul>
   <br>
-  <p>As a leading health organization in our region, we want to be a strong influence for better health and prevention, and there is no better place to start than among our own employees.</p>
+  <p>As a rising health organization in our region, we want to be a strong influence for better health and prevention, and there is no better place to start than among our own employees.</p>
   <small>CEO OOP-Assignment</small>
   </div>
 
@@ -74,3 +73,8 @@
 </div>
 </div>
 </body>
+<script src="https://kit.fontawesome.com/cbe61eb727.js" crossorigin="anonymous"></script>
+<script type="module" src="js/index.js"></script>
+<script type="module" src="js/module.js"></script>
+
+</html>
