--- a/public/equipment.html
+++ b/public/equipment.html
@@ -94,14 +94,7 @@
                   <input type="text" id="equipManuf" name="equipManuf" required>
                   <label for="equipManuf">Manufacturers</label>
               </div>
-              <div class="input-box">
-                  <input type="date" id="equipExpDate" name="equipExpDate" required>
-                  <label for="equipExpDate">Expire Date</label>
-              </div>
-              <div class="input-box">
-                <input type="number" id="equipPrice" name="equipPrice" required>
-                <label for="equipPrice">Price</label>
-              </div>
+              
               <div class="error-notify hide">
                   Please fill in.
               </div>
@@ -122,7 +115,7 @@
 </script>
 <script src="https://kit.fontawesome.com/cbe61eb727.js" crossorigin="anonymous"></script>
 <script type="module" src="js/index.js"></script>
-<script type="module" src="js/medicine.js"></script>
+<script type="module" src="js/equipment.js"></script>
 <!-- <script>
   // Initial variable values
   var userPic = document.getElementById('user-sub-menu');
