--- a/public/index.html
+++ b/public/index.html
@@ -62,209 +62,87 @@
 
   </script>
 </section> -->
-
-<section id="serviceSection">
-  <div class="container">
-    <h1>Our Service</h1>
-    <div class="row">
-      <div class="service">
-        <i class="fa-solid fa-hospital-user"></i>
-        <h2>Appointment</h2>
-        <p>Lorem ipsum. king king shit</p>
-      </div>
-      <div class="service">
-        <i class="fa-solid fa-receipt"></i>
-        <h2>Medical History</h2>
-        <p>NOT touching this shit</p>
-      </div>
-      <div id="DoctorTab" class="service">
-        <i class="fa-solid fa-user-doctor"></i>
-        <h2>Our Doctor</h2>
-        <p>Lorem ipsum. king king shit</p>
-      </div>
-      <script>
-        const DoctorTab = document.getElementById("DoctorTab");
-        DoctorTab.addEventListener('click', function(event) {
-          window.location.href = "doctor.html";
-        });
-      </script>
-      <div id="EquipmentTab" class="service">
-        <i class="fa-solid fa-kit-medical"></i>
-        <h2>Equipment</h2>
-        <p>Lorem ipsum. king king shit</p>
-      </div>
-      <script>
-        const EquipmentTab = document.getElementById("EquipmentTab");
-        EquipmentTab.addEventListener('click', function(event) {
-          window.location.href = "equipment.html";
-        });
-      </script>
-      <div id="MedicineTab" class="service">
-        <i class="fa-solid fa-pills"></i>
-        <h2>Medicines</h2>
-        <p>Lorem ipsum. king king shit</p>
-      </div>
-      <script>
-        const MedicineTab = document.getElementById("MedicineTab");
-        MedicineTab.addEventListener('click', function(event) {
-          window.location.href = "medicine.html";
-        });
-      </script>
-    </div>
+<!-- Slider -->
+<div id="slide">
+  <div class="slideshow-container">
+  <div class="mySlides fade"> <img src="images/slider/1.jpg" alt="Slider1" style="width:100%"> </div>
+  <div class="mySlides fade"> <img src="images/slider/2.jpg" alt="Slider2" style="width:100%"> </div>
+  <div class="mySlides fade"> <img src="images/slider/3.jpg" alt="Slider3" style="width:100%"> </div>
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a> <a class="next" onclick="plusSlides(1)">&#10095;</a> 
   </div>
-</section>
-
-<section id="loginSection">
-  <div class="loginPage">
-    <div class="wrapper">
-        <div class="form-box login">
-            <h2>Login</h2>
-            <form>
-                <div class="input-box">
-                    <span class="icon"><ion-icon
-                    name="mail"></ion-icon></span>
-                    <input type="email" id="login-Email" required>
-                    <label>Email</label>
-                </div>
-                <div class="input-box">
-                    <span class="icon"><ion-icon
-                    name="lock-closed"></ion-icon></span>
-                    <input type="password" id="login-Password" required>
-                    <label>Password</label>
-                </div>
-                <div class="error-notify login">
-                    Please fill in.
-                </div>
-                <div class="remember-forgot">
-                    <label><input type="checkbox">
-                    Remember me</label>
-                    <a href="#">Forgot Password?</a>
-                </div>
-            </form>
-            <button class="btn" id="login">LOG IN</button>
-            <div class="login-register">
-                <p>Don't have an account? <a href="#" class="register-link">Register</a></p>
-                <script>
-                    document.querySelector(".register-link").addEventListener('click', function(event) {
-                        event.preventDefault(); // Prevent the default action
-                    });
-                </script>
-            </div>
-        </div>
-        <div class="form-box register">
-            <h2>Registration</h2>
-            <form>
-                <div class="input-box">
-                    <span class="icon"><ion-icon
-                    name="mail"></ion-icon></span>
-                    <input type="email" id="register-Email" required>
-                    <label>Email</label>
-                </div>
-
-                <div class="input-box">
-                    <span class="icon"><ion-icon
-                    name="person"></ion-icon></span>
-                    <input type="text" id="register-Name" required>
-                    <label>Full Name</label>
-                </div>
-
-                <div class="input-box">
-                    <span class="icon"><ion-icon
-                    name="lock-closed"></ion-icon></span>
-                    <input type="password" id="register-Password" required>
-                    <label>Password</label>
-                </div>
-                <div class="select-box">
-                    <select id="enterRole" required>
-                        <option value="User" disabled selected>Select Role</option>
-                        <option value="User">User</option>
-                        <option value="Staff">Staff</option>
-                        <option value="Doctor">Doctor</option>
-                        <option value="Nurse">Nurse</option>
-                        <!-- try to make another role for admin -->
-                    </select>
-                </div>
-                <div class="error-notify register">
-                    Please fill in.
-                </div>
-                <div class="remember-forgot">
-                    <label><input type="checkbox">
-                    I agree to the terms & conditions</label>
-                </div>
-            </form>
-            <button class="btn" id="register">Register</button>
-            <div class="login-register">
-                <p>Already have an account? <a href="#" class="login-link">Login</a></p>
-                <script>
-                    document.querySelector(".login-link").addEventListener('click', function(event) {
-                        event.preventDefault(); // Prevent the default action
-                    });
-                </script>
-            </div>
-        </div>
-    </div>
-</div>
-</section>
-
-<section id="medicineSection">
-  <div class="container">
-    <h1>Buy Medicines</h1>
-    <div class="Medrow">
-      <div id="AddMedicine" class="medicinesItem">
-        <i class="fa-solid fa-plus"></i>
-        <h2>Add Medicine</h2>
-      </div>
-      <script>
-        document.getElementById("AddMedicine").addEventListener('click', function(event) {
-          document.querySelector('.Medicines-popup').classList.add("active");
-        });
-      </script>
-    </div>
-    <div class="Medicines-popup">
-      <div class="wrapper">
-        <span class="icon-close">
-          <i class="fa-solid fa-xmark"></i>
-        </span>
-        <script>
-          document.querySelector('.icon-close').addEventListener('click', function(event) {
-          document.querySelector('.Medicines-popup').classList.remove("active");
-        });
-        </script>
-        <div class="form-box login">
-            <h2>Add Medicine</h2>
-            <form>
-                <div class="input-box">
-                    <input type="text" id="medName" required>
-                    <label>Name</label>
-                </div>
-                <div class="input-box">
-                    <input type="number" id="medNumber" required>
-                    <label>Number</label>
-                </div>
-                <div class="input-box">
-                    <input type="text" id="medManuf" required>
-                    <label>Manufacturers</label>
-                </div>
-                <div class="input-box">
-                    <input type="date" id="medExpDate" required>
-                    <label>Expire Date</label>
-                </div>
-                <div class="input-box">
-                  <input type="number" id="medPrice" required>
-                  <label>Price</label>
-                </div>
-                <div class="error-notify hide">
-                    Please fill in.
-                </div>
-            </form>
-            <button class="btn" id="addMedbtn">Add</button>
-          </div>
-        </div>
-      </div>
+  <br>
+  <div style="text-align:center"> 
+  <span class="dot" onclick="currentSlide(1)"></span> 
+  <span class="dot" onclick="currentSlide(2)"></span> 
+  <span class="dot" onclick="currentSlide(3)"></span>
+  <span class="dot" onclick="currentSlide(4)"></span>
   </div>
-</section>
+  </div>
 
+  <script>
+  var slideIndex = 0;
+  showSlides();
+  var slides,dots;
 
+  function showSlides() {
+  var i;
+  slides = document.getElementsByClassName("mySlides");
+  dots = document.getElementsByClassName("dot");
+  for (i = 0; i < slides.length; i++) {
+  slides[i].style.display = "none";  
+  }
+  slideIndex++;
+  if (slideIndex> slides.length) {slideIndex = 1}    
+  for (i = 0; i < dots.length; i++) {
+  dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block";  
+  dots[slideIndex-1].className += " active";
+  setTimeout(showSlides, 8000); // Change image every 8 seconds
+  }
+
+  function plusSlides(position) {
+  slideIndex +=position;
+  if (slideIndex> slides.length) {slideIndex = 1}
+  else if(slideIndex<1){slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+  slides[i].style.display = "none";  
+  }
+  for (i = 0; i < dots.length; i++) {
+  dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block";  
+  dots[slideIndex-1].className += " active";
+  }
+
+  function currentSlide(index) {
+  if (index> slides.length) {index = 1}
+  else if(index<1){index = slides.length}
+  for (i = 0; i < slides.length; i++) {
+  slides[i].style.display = "none";  
+  }
+  for (i = 0; i < dots.length; i++) {
+  dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[index-1].style.display = "block";  
+  dots[index-1].className += " active";
+  }
+  </script>
+
+<div class="container content-md welcomeSection">
+  <div class="row section1">
+  <div class="col-md-6" style="margin-bottom: 40px;" style="border:2px solid black background: green;">
+    <h2 class="title-v2">WELCOME TO <span style="color: #2c45c0;"> GPROJEKT </span></h2>
+    <p style="text-align: justify; font-size: 14px;">A state-of-the art modern facility in the heart of the Ho Chi Minh city, it is spread over 10 acres and has a built-up area of over 440000 square feet. Currently the hospital has 300+ beds with a capacity to expand to 400 beds.</p>
+    <p style="text-align: justify; font-size: 14px;">GPROJEKT Hospital, Ho Chi Minh city is a tertiary care flagship unit of the Unity Hospitals Group.The Hospital focuses on centres of excellence like Cardiac Sciences, Neuro Sciences, Orthopaedics including Knee Replacement, Hip Replacement and Spine Surgery, Cancer, Emergency Medicine and Solid Organ Transplants besides the complete range of more than 35 allied medical disciplines under the same roof.</p> 
+    <p style="text-align: justify; font-size: 14px;"> GPROJEKT Hospital, Ho Chi Minh city provides holistic healthcare that includes prevention, treatment, rehabilitation and health education for patients, their families and clients by touching their lives.</p> <br>
+    <a href="about.html" class="btn-u btn-brd btn-brd-hover">Read More</a>
+  </div>
+  <div class="col-md-6 overflow-h">
+    <img style="border-radius: 50px; margin-left: 30px;" src="assets/img/bg/1.jpg" alt="">
+  </div>
+  </div>
+  </div>
 
 </body>
 <script src="https://kit.fontawesome.com/cbe61eb727.js" crossorigin="anonymous"></script>
